Melhorias na parte do RH e no CI/CD

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,24 +31,40 @@ jobs:
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       run: mvn -B package --file pom.xml
 
-    - name: Disponibilizar Executáveis para Download
-      uses: actions/upload-artifact@v4
-      with:
-        name: UFS-Bank-Pacote-Completo
-        # O caminho abaixo pega todos os JARs que o Maven gerou no target
-        path: target/*.jar
+    - name: Preparar Pacote de Entrega
+      run: |
+        # Cria uma pasta temporária para organizar o ZIP
+        mkdir -p pacote_ufs_bank/Data/Arquivos
+        
+        # Copia os JARs gerados pelo Maven
+        cp target/*-server.jar pacote_ufs_bank/
+        cp target/*-client.jar pacote_ufs_bank/
+        
+        # Copia o seu arquivo .bat da raiz
+        cp jogar_ufs_bank.bat pacote_ufs_bank/
+        
+        # Copia os seus arquivos .txt necessários para o projeto
+        # Ajuste o caminho se a sua pasta de arquivos for diferente
+        cp src/Data/Arquivos/*.txt pacote_ufs_bank/Data/Arquivos/
+        
+        # Opcional: Criar um .env de exemplo vazio para eles preencherem
+        echo "DB_HOST=\nDB_PORT=\nDB_NAME=\nDB_USER=\nDB_PASSWORD=" > pacote_ufs_bank/.env.example
 
-    - name: Criar Release e Upload dos JARs
+    - name: Criar Release e Upload do ZIP Completo
       uses: softprops/action-gh-release@v1
       if: github.ref == 'refs/heads/main'
       with:
         tag_name: v${{ github.run_number }}
         name: Release v${{ github.run_number }}
-        draft: false
-        prerelease: false
         files: |
-          target/*-server.jar
-          target/*-client.jar
-          executa_facil.bat
+          pacote_ufs_bank/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Upload Artifact (Para teste rápido na aba Actions)
+      uses: actions/upload-artifact@v4
+      with:
+        name: UFS-Bank-Pacote-Completo
+        path: pacote_ufs_bank/
+
+   
